--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-spring": "^9.7.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
